# home-work-11

./: CMakeLists.txt  Doxyfile  FilePool.cpp  FilePool.h  MapReduce.cpp  MapReduce.h  README.md  ShufflerFilePool.cpp  ShufflerFilePool.h  annotated.html  annotated_dup.js  classes.html  client.cpp  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  tests.cpp
.github/workflows/: release.yml
d0/d29/: classMapReduce-members.html
d0/d30/: md_README.html
d0/d45/: classFilePool.html  classFilePool.js
d0/d48/: client_8cpp__incl.map  client_8cpp__incl.md5
d0/def/: MapReduce_8cpp__incl.map  MapReduce_8cpp__incl.md5
d2/d6b/: classShufflerFilePool-members.html
d4/ddc/: structData.html  (+1 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+1 more)
(+56 files in other folders)
